src/objects/User_Position__c.object
<CustomObject>
    <fields>
        <fullName>Company_Id__c</fullName>
        <label>Company Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Industry__c</fullName>
        <label>Company Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Ticker__c</fullName>
        <label>Company Ticker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCurrent__c</fullName>
        <label>IsCurrent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_End_Date__c</fullName>
        <label>Position End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Id__c</fullName>
        <label>Position Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Start_Date__c</fullName>
        <label>Position Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Summary__c</fullName>
        <label>Position Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Position</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Position</label>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Position</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>